--- a/src/test/resources/org/datadog/jenkins/plugins/datadog/test-config.yml
+++ b/src/test/resources/org/datadog/jenkins/plugins/datadog/test-config.yml
@@ -5,9 +5,11 @@ unclassified:
   datadogGlobalConfiguration:
     datadogClientConfiguration:
       datadogApiConfiguration:
-        apiUrl: 'my-api-url'
-        logIntakeUrl: 'my-log-intake-url'
-        webhookIntakeUrl: 'my-webhook-intake-url'
+        intake:
+          datadogIntakeUrls:
+            apiUrl: 'my-api-url'
+            logsUrl: 'my-log-intake-url'
+            webhooksUrl: 'my-webhook-intake-url'
         apiKey:
           datadogCredentialsApiKey:
             credentialsId: 'my-api-key-credentials-id'
