--- a/docker/docker-compose-casc.yaml
+++ b/docker/docker-compose-casc.yaml
@@ -17,13 +17,7 @@ services:
       GITHUB_SSH_KEY: $GITHUB_SSH_KEY
       GITHUB_SSH_KEY_PASSPHRASE: $GITHUB_SSH_KEY_PASSPHRASE
       JENKINS_AGENT_NAMES: "agent-dotnet agent-python agent-js"
-      DATADOG_JENKINS_PLUGIN_REPORT_WITH: DSD
-      DATADOG_JENKINS_PLUGIN_COLLECT_BUILD_LOGS: false
-      DATADOG_JENKINS_PLUGIN_TARGET_HOST: datadog # `dogstatsd` or `datadog` based on the container you wish to use
-      DATADOG_JENKINS_PLUGIN_TARGET_LOG_COLLECTION_PORT: 10518
-      DATADOG_JENKINS_PLUGIN_TARGET_API_KEY: $JENKINS_PLUGIN_DATADOG_API_KEY
-      DATADOG_JENKINS_PLUGIN_ENABLE_CI_VISIBILITY: true
-      DATADOG_JENKINS_PLUGIN_CI_VISIBILITY_CI_INSTANCE_NAME: $JENKINS_PLUGIN_DATADOG_CI_INSTANCE_NAME
+      CASC_JENKINS_CONFIG: "/var/jenkins_home/casc"
     volumes:
       - jenkins_shared:/var/jenkins_home/shared
       - $JENKINS_PLUGIN/target/datadog.hpi:/var/jenkins_home/plugins/datadog.hpi
