Refactor logs submission

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
       GITHUB_SSH_KEY_PASSPHRASE: $GITHUB_SSH_KEY_PASSPHRASE
       JENKINS_AGENT_NAMES: "agent-dotnet agent-python agent-js"
       DATADOG_JENKINS_PLUGIN_REPORT_WITH: DSD
-      DATADOG_JENKINS_PLUGIN_COLLECT_BUILD_LOGS: false
+      DATADOG_JENKINS_PLUGIN_COLLECT_BUILD_LOGS: true
       DATADOG_JENKINS_PLUGIN_TARGET_HOST: datadog # `dogstatsd` or `datadog` based on the container you wish to use
       DATADOG_JENKINS_PLUGIN_TARGET_LOG_COLLECTION_PORT: 10518
       DATADOG_JENKINS_PLUGIN_TARGET_API_KEY: $JENKINS_PLUGIN_DATADOG_API_KEY
