--- a/pom.xml
+++ b/pom.xml
@@ -205,6 +205,11 @@
       <artifactId>bcpg-jdk18on</artifactId>
       <version>1.72</version>
     </dependency>
+    <dependency>
+      <groupId>io.jenkins.lib</groupId>
+      <artifactId>support-log-formatter</artifactId>
+      <version>1.2</version>
+    </dependency>
   </dependencies>
 
   <build>
