--- a/src/test/resources/org/datadog/jenkins/plugins/datadog/test-config.yml
+++ b/src/test/resources/org/datadog/jenkins/plugins/datadog/test-config.yml
@@ -2,7 +2,30 @@ jenkins:
   systemMessage: "Example of configuring datadog in Jenkins"
 
 unclassified:
-    datadogGlobalConfiguration:
-      reportWith: 'HTTP'
-      targetApiKey: 'test'
-      emitConfigChangeEvents: true
+  datadogGlobalConfiguration:
+    datadogClientConfiguration:
+      datadogApiConfiguration:
+        intake:
+          datadogIntakeUrls:
+            apiUrl: 'my-api-url'
+            logsUrl: 'my-log-intake-url'
+            webhooksUrl: 'my-webhook-intake-url'
+        apiKey:
+          datadogCredentialsApiKey:
+            credentialsId: 'my-api-key-credentials-id'
+    enableCiVisibility: true
+    ciInstanceName: 'my-ci-instance-name'
+    excluded: 'my-excluded'
+    included: 'my-included'
+    hostname: 'my-hostname'
+    globalTagFile: 'my-global-tag-file'
+    globalTags: 'my-global-tags'
+    globalJobTags: 'my-global-job-tags'
+    includeEvents: 'my-include-events'
+    excludeEvents: 'my-exclude-events'
+    emitSecurityEvents: true
+    emitSystemEvents: true
+    collectBuildLogs: true
+    refreshDogstatsdClient: true
+    cacheBuildRuns: true
+    useAwsInstanceHostname: true
