--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -16,7 +16,7 @@ services:
     environment:
       GITHUB_SSH_KEY: $GITHUB_SSH_KEY
       GITHUB_SSH_KEY_PASSPHRASE: $GITHUB_SSH_KEY_PASSPHRASE
-      JENKINS_AGENT_NAMES: "agent-dotnet agent-python agent-js"
+      JENKINS_AGENT_NAMES: "agent-dotnet agent-python agent-js agent-ruby"
       DATADOG_JENKINS_PLUGIN_REPORT_WITH: DSD
       DATADOG_JENKINS_PLUGIN_COLLECT_BUILD_LOGS: true
       DATADOG_JENKINS_PLUGIN_TARGET_HOST: datadog # `dogstatsd` or `datadog` based on the container you wish to use
