--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   <url>https://github.com/jenkinsci/datadog-plugin</url>
   <groupId>org.datadog.jenkins.plugins</groupId>
   <artifactId>datadog</artifactId>
-  <version>8.3.0</version>
+  <version>8.3.1-SNAPSHOT</version>
   <packaging>hpi</packaging>
 
   <properties>
