Address review comments

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -24,6 +24,7 @@ services:
       DATADOG_JENKINS_PLUGIN_TARGET_API_KEY: $JENKINS_PLUGIN_DATADOG_API_KEY
       DATADOG_JENKINS_PLUGIN_ENABLE_CI_VISIBILITY: true
       DATADOG_JENKINS_PLUGIN_CI_VISIBILITY_CI_INSTANCE_NAME: $JENKINS_PLUGIN_DATADOG_CI_INSTANCE_NAME
+      DATADOG_JENKINS_PLUGIN_DATADOG_APP_HOSTNAME: $JENKINS_PLUGIN_DATADOG_APP_HOSTNAME
       # uncomment the variable below (and optionally comment the `DATADOG_` vars above) to use Configuration as Code
       # CASC_JENKINS_CONFIG: "/var/jenkins_home/casc"
     volumes:
