--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -16,6 +16,8 @@ services:
     environment:
       GITHUB_SSH_KEY: $GITHUB_SSH_KEY
       GITHUB_SSH_KEY_PASSPHRASE: $GITHUB_SSH_KEY_PASSPHRASE
+      GITHUB_USERNAME: $GITHUB_USERNAME
+      GITHUB_PERSONAL_ACCESS_TOKEN: $GITHUB_PERSONAL_ACCESS_TOKEN
       JENKINS_AGENT_NAMES: "agent-dotnet agent-python agent-js agent-ruby"
       DATADOG_JENKINS_PLUGIN_REPORT_WITH: DSD
       DATADOG_JENKINS_PLUGIN_COLLECT_BUILD_LOGS: true
