--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
       GITHUB_SSH_KEY_PASSPHRASE: $GITHUB_SSH_KEY_PASSPHRASE
       GITHUB_USERNAME: $GITHUB_USERNAME
       GITHUB_PERSONAL_ACCESS_TOKEN: $GITHUB_PERSONAL_ACCESS_TOKEN
-      JENKINS_AGENT_NAMES: "agent-dotnet agent-python agent-js agent-ruby"
+      JENKINS_AGENT_NAMES: "agent-dotnet agent-python agent-js agent-ruby agent-go"
       DATADOG_JENKINS_PLUGIN_REPORT_WITH: DSD
       DATADOG_JENKINS_PLUGIN_COLLECT_BUILD_LOGS: true
       DATADOG_JENKINS_PLUGIN_TARGET_HOST: datadog # `dogstatsd` or `datadog` based on the container you wish to use
@@ -81,6 +81,19 @@ services:
     environment:
       JENKINS_URL: http://jenkins-controller:8080
       JENKINS_AGENT_NAME: agent-ruby
+      JENKINS_AGENT_WORKDIR: /jenkins/agent
+    volumes:
+      - jenkins_shared:/shared
+
+  jenkins-agent-go:
+    build:
+      context: ./agent-node
+      dockerfile: Dockerfile-go
+    depends_on:
+      - jenkins-controller
+    environment:
+      JENKINS_URL: http://jenkins-controller:8080
+      JENKINS_AGENT_NAME: agent-go
       JENKINS_AGENT_WORKDIR: /jenkins/agent
     volumes:
       - jenkins_shared:/shared
