--- a/pom.xml
+++ b/pom.xml
@@ -116,9 +116,8 @@
       <artifactId>json-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.bouncycastle</groupId>
-      <artifactId>bcpg-jdk18on</artifactId>
-      <version>1.80</version>
+    <groupId>org.jenkins-ci.plugins</groupId>
+    <artifactId>bouncycastle-api</artifactId>
     </dependency>
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
