--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
       <dependency>
         <groupId>io.jenkins.tools.bom</groupId>
         <artifactId>bom-${jenkins.baseline}.x</artifactId>
-        <version>4570.v1b_c718dd3b_1e</version>
+        <version>4890.vfca_82c6741a_d</version>
         <scope>import</scope>
         <type>pom</type>
       </dependency>
