--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -1,11 +1,16 @@
 name: "Pull Request Labeler"
 on:
-- pull_request
+  - pull_request
+
+permissions: {}
 
 jobs:
   triage:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
-    - uses: DataDog/labeler@glob-all
-      with:
-        repo-token: "${{ secrets.GITHUB_TOKEN }}"
+      - uses: DataDog/labeler@glob-all
+        with:
+          repo-token: "${{ secrets.GITHUB_TOKEN }}"
