--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,4 +3,4 @@
 # and another team can own the rest of the directory.
 
 # All your base
-*                       @drodriguezhdez @CarlosNietoP @rodrigo-roca @rodrimendoza @afontan @xinyeji
+*                       @drodriguezhdez @CarlosNietoP @rodrigo-roca @rodrimendoza @afontan @xinyeji @nikita-tkachenko-datadog
